--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+ 
+  lottie: ^3.2.0
 
 dev_dependencies:
   flutter_test:
@@ -23,3 +25,6 @@ flutter_launcher_icons:
 
 flutter:
   uses-material-design: true
+
+  assets:
+   - assets/
