--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,6 @@ dependencies:
     sdk: flutter
  
   lottie: ^3.2.0
-  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
@@ -29,3 +28,16 @@ flutter:
 
   assets:
    - assets/
+
+  fonts:
+    - family: Oxanium
+      fonts:
+        - asset: assets/fonts/static/Oxanium-Regular.ttf
+
+    - family: Rajdhani
+      fonts:
+        - asset: assets/fonts/Rajdhani-Regular.ttf
+
+    - family: Bangers
+      fonts:
+        - asset: assets/fonts/Bangers-Regular.ttf
